--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,15 @@
       integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
       crossorigin="anonymous"
     ></script>
+    <style>
+      html {
+        height: 100%;
+      }
+
+      body {
+        height: 100%;
+      }
+    </style>
   </head>
   <body>
     <app-root></app-root>
